--- a/style.css
+++ b/style.css
@@ -15,14 +15,24 @@ body {
 
 }
 
+.size-options {
+    margin-bottom: 15px;
+}
+
+input {
+    width: 50px;
+    margin: 0 8px
+}
+
 #container {
     display: flex;
     flex-wrap: wrap;
     width: 640px;
     height: 640px;
+    margin: 20px;
 }
 
-#container div {
+.box {
     display: flex;
     background-color: rgb(225, 225, 225);
     width: 10px;
